--- a/index.css
+++ b/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Young+Serif&display=swap');
 
 *{
     margin: 0;
@@ -52,10 +53,10 @@ nav ul li a:hover{
 }
 
 .left{
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Young Serif', serif;
     font-weight: 800;
     font-size: 1.5rem;
-    color: white;
+    color: rgb(0, 255, 42);
     position: relative;
     /* height: 80px; */
     z-index: 1;
@@ -65,11 +66,11 @@ nav ul li a:hover{
 .left::before{
     content: "Nishil's Portfolio";
     position: absolute;
-    color: #38c700;
+    color: #ffffff;
     top: -1px;
     left: -2px;
     z-index: -1;
-    -webkit-text-stroke: 2px #38c700;
+    -webkit-text-stroke: 2px #727272;
     /* color: #0e4745; */
 }
 
