--- a/index.css
+++ b/index.css
@@ -12,8 +12,19 @@ body{
     font-family: 'Ysabeau Infant', sans-serif;
 }
 
+.container{
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    width: 100vw;
+}
+
 .menu{
     display: none;
+}
+
+#header{
+    height: 55px;
 }
 
 nav{
@@ -56,7 +67,7 @@ nav ul li a:hover{
     font-family: 'Young Serif', serif;
     font-weight: 800;
     font-size: 1.5rem;
-    color: rgb(0, 255, 42);
+    color: rgb(144, 255, 40);
     position: relative;
     /* height: 80px; */
     z-index: 1;
@@ -66,18 +77,45 @@ nav ul li a:hover{
 .left::before{
     content: "Nishil's Portfolio";
     position: absolute;
-    color: #ffffff;
+    color: #2bff00;
     top: -1px;
     left: -2px;
     z-index: -1;
-    -webkit-text-stroke: 2px #727272;
+    -webkit-text-stroke: 2px #000000;
     /* color: #0e4745; */
 }
 
 .left:hover{
     /* color: #0e4745; */
-
+    
     font-size: 1.4rem;
     cursor: crosshair;
+    
+}
 
+.first-section{
+    display: flex;
+}
+
+.first-left{
+    /* width: 50%; */
+    color: white;
+    font-size: 90px;
+    -webkit-text-stroke: 3px #3a2c2c;
+    font-weight: 900;
+}
+
+.nameP-1:hover{
+    color: #000000;
+    transition-duration: .5s;
+}
+
+.nameP-2:hover{
+    color: #000000;
+    transition-duration: .5s;
+}
+
+.nameP-3:hover{
+    color: #000000;
+    transition-duration: .5s;
 }
