--- a/index.css
+++ b/index.css
@@ -67,7 +67,7 @@ nav ul li a:hover{
     font-family: 'Young Serif', serif;
     font-weight: 800;
     font-size: 1.5rem;
-    color: rgb(144, 255, 40);
+    color: rgb(0, 255, 21);
     position: relative;
     /* height: 80px; */
     z-index: 1;
@@ -77,7 +77,7 @@ nav ul li a:hover{
 .left::before{
     content: "Nishil's Portfolio";
     position: absolute;
-    color: #2bff00;
+    color: rgb(0, 255, 21);
     top: -1px;
     left: -2px;
     z-index: -1;
@@ -93,29 +93,49 @@ nav ul li a:hover{
     
 }
 
-.first-section{
+.first-section{    
     display: flex;
+    justify-content: space-around;
+    height: 95vh;
+    width: 100vw;
 }
 
 .first-left{
     /* width: 50%; */
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
     color: white;
     font-size: 90px;
-    -webkit-text-stroke: 3px #3a2c2c;
+    -webkit-text-stroke: 3px #323a2c;
     font-weight: 900;
+}
+
+.name-container{
+    display: flex;
+    position: relative;
+    bottom: 40px;
 }
 
 .nameP-1:hover{
     color: #000000;
-    transition-duration: .5s;
+    transition-duration: .6s;
+    -webkit-text-stroke: 2px #6fff00;
 }
 
 .nameP-2:hover{
     color: #000000;
-    transition-duration: .5s;
+    transition-duration: .6s;
+    -webkit-text-stroke: 2px #6fff00;
 }
 
 .nameP-3:hover{
     color: #000000;
-    transition-duration: .5s;
+    transition-duration: .6s;
+    -webkit-text-stroke: 2px #6fff00;
+}
+
+.main-image{
+    height: 880px;
 }
