--- a/index.css
+++ b/index.css
@@ -1,9 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Young+Serif&display=swap');
 
+html{
+    scroll-behavior: smooth;
+}
+
 *{
     margin: 0;
     padding: 0;
+    /* scroll-behavior: smooth; */
 }
 
 body{
@@ -26,8 +31,13 @@ body{
 
 /* Header Page/Naigation Bar CSS */
 #header{
+    position: relative;
     height: 55px;
 }
+
+/* #nav{
+    position: relative;
+} */
 
 nav{
     display: flex;
@@ -35,7 +45,7 @@ nav{
     justify-content: space-around;
     align-items: center;
     position: fixed;
-    height: 55px;
+    /* height: 55px; */
     color: black;
     z-index: 99;
     /* background-color: rgb(35 11 11); */
@@ -117,15 +127,15 @@ nav ul li a:hover{
 
 
 /* First Sectio of the Website */
-.first-section{    
+.first-section{
     display: flex;
     justify-content: space-around;
-    height: 95vh;
+    height: 100vh;
     width: 100vw;
 }
 
 .first-left{
-    /* width: 50%; */
+    width: 50%;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -160,6 +170,10 @@ nav ul li a:hover{
     -webkit-text-stroke: 2px #6fff00;
 }
 
+/* .first-right{
+    width: 50%;
+} */
+
 .main-image{
-    height: 880px;
+    height: 625px;
 }
