--- a/index.css
+++ b/index.css
@@ -14,6 +14,7 @@ html{
 body{
     /* background-color: rgb(0, 0, 0); */
     color: white;
+    background-color: #B4DAA7;
     font-family: 'Ysabeau Infant', sans-serif;
 }
 
@@ -24,10 +25,14 @@ body{
     width: 100vw;
 }
 
-.menu{
-    display: none;
+.right-menu{
+    background-color: white;
+    border: 2px solid white;
+    border-radius: 15px;
+    height: 35px;
+    display: flex;
+    align-items: center;
 }
-
 
 /* Header Page/Naigation Bar CSS */
 #header{
@@ -45,69 +50,80 @@ nav{
     justify-content: space-around;
     align-items: center;
     position: fixed;
-    /* height: 55px; */
-    color: black;
+    /* color: #F6F4C3; */
     z-index: 99;
-    /* background-color: rgb(35 11 11); */
-    /* width: 100vw; */
+    top: 10px;
 }
 
 nav ul{
     display: flex;
+    align-items: center;
     justify-content: center;
+    height: 39px;
 }
+
 
 nav ul li{
-    color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 30px;
+    width: 130px;
+    border-radius: 10px;
     list-style-type: none;
-    margin: 0 23px;
+    margin: 0 8px;
+    transition-duration: 0.8s;
 }
+
+nav ul li:hover{
+    border-radius: 10px;
+    background-color: #224e21;
+}
+
+
+
+/* Original CSS, For Developer ONLY, Refer the CSS Below for clearance! */
 
 nav ul li a{
+    /* height: auto;
+    width: auto; */
     text-decoration: none;
-    color: black;
+    color: #2d6744;
     font-weight: 900;
-    transition-duration: 0.8s;
+    transition-duration: 0.6s;
     font-size: 1.1rem;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 30px;
+    width: 130px;
+    border-radius: 10px;
+    list-style-type: none;
+    margin: 0 8px;
+    transition-duration: 0.8s;
 }
+
+
+
+
+
 
 nav ul li a:hover{
-    color: #63665b;
+    color: #F6F4C3;
 }
-.hover-underline-animation {
-    display: inline-block;
-    position: relative;
-  }
-  
-  .hover-underline-animation:after {
-    content: '';
-    position: absolute;
-    width: 100%;
-    transform: scaleX(0);
-    height: 2px;
-    bottom: 0;
-    left: 0;
-    background-color: #0087ca;
-    transform-origin: bottom right;
-    transition: transform 0.25s ease-out;
-  }
-  
-  .hover-underline-animation:hover:after {
-    transform: scaleX(1);
-    transform-origin: bottom left;
-  }
 
-.left{
+/* .left{
     font-family: 'Young Serif', serif;
     font-weight: 800;
     font-size: 1.5rem;
     color: rgb(0, 255, 21);
     position: relative;
-    /* height: 80px; */
+    height: 80px;
     z-index: 1;
     transition-duration: 1.2s;
-}
-
+} */
+/* 
 .left::before{
     content: "Nishil's Portfolio";
     position: absolute;
@@ -116,8 +132,8 @@ nav ul li a:hover{
     left: -2px;
     z-index: -1;
     -webkit-text-stroke: 2px #000000;
-    /* color: #0e4745; */
-}
+    color: #0e4745;
+} */
 
 .left:hover{
     /* color: #0e4745; */
@@ -142,7 +158,7 @@ nav ul li a:hover{
     align-items: center;
     color: white;
     font-size: 90px;
-    -webkit-text-stroke: 3px #323a2c;
+    -webkit-text-stroke: 2px #323a2c;
     font-weight: 900;
 }
 
@@ -150,24 +166,26 @@ nav ul li a:hover{
     display: flex;
     position: relative;
     bottom: 40px;
+    border: none;
+    border-style: none;
 }
 
 .nameP-1:hover{
-    color: #000000;
+    color: #385739;
     transition-duration: .6s;
-    -webkit-text-stroke: 2px #6fff00;
+    /* -webkit-text-stroke: 2px #6fff00; */
 }
 
 .nameP-2:hover{
-    color: #000000;
+    color: #385739;
     transition-duration: .6s;
-    -webkit-text-stroke: 2px #6fff00;
+    /* -webkit-text-stroke: 2px #6fff00; */
 }
 
 .nameP-3:hover{
-    color: #000000;
+    color: #385739;
     transition-duration: .6s;
-    -webkit-text-stroke: 2px #6fff00;
+    /* -webkit-text-stroke: 2px #6fff00; */
 }
 
 /* .first-right{
@@ -176,4 +194,9 @@ nav ul li a:hover{
 
 .main-image{
     height: 625px;
+}
+
+.second-section{
+    height: 100vh;
+    width: 100vw;
 }
