--- a/index.css
+++ b/index.css
@@ -12,6 +12,7 @@ html{
 }
 
 body{
+    width: 100%;
     /* background-color: rgb(0, 0, 0); */
     color: white;
     background-color: #B4DAA7;
@@ -22,7 +23,7 @@ body{
     display: flex;
     flex-direction: column;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
 }
 
 .right-menu{
@@ -47,7 +48,7 @@ body{
 nav{
     display: flex;
     width: 100%;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     position: fixed;
     /* color: #F6F4C3; */
@@ -145,13 +146,13 @@ nav ul li a:hover{
 /* First Sectio of the Website */
 .first-section{
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
 }
 
 .first-left{
-    width: 50%;
+    /* width: 50%; */
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -198,5 +199,5 @@ nav ul li a:hover{
 
 .second-section{
     height: 100vh;
-    width: 100vw;
+    width: 100%;
 }
