Commit by Office

--- a/index.css
+++ b/index.css
@@ -15,7 +15,12 @@ body{
     width: 100%;
     /* background-color: rgb(0, 0, 0); */
     color: white;
-    background-color: #B4DAA7;
+
+    background: #141E30;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #243B55, #141E30);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #243B55, #141E30); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+    /* background-color: #B4DAA7; */
     font-family: 'Ysabeau Infant', sans-serif;
 }
 
@@ -52,7 +57,7 @@ nav{
     align-items: center;
     position: fixed;
     /* color: #F6F4C3; */
-    z-index: 99;
+    /* z-index: 99; */
     top: 10px;
 }
 
@@ -73,12 +78,12 @@ nav ul li{
     border-radius: 10px;
     list-style-type: none;
     margin: 0 8px;
-    transition-duration: 0.8s;
+    transition-duration: 0.6s;
 }
 
 nav ul li:hover{
     border-radius: 10px;
-    background-color: #224e21;
+    background-color: rgb(33, 64, 78);
 }
 
 
@@ -89,7 +94,7 @@ nav ul li a{
     /* height: auto;
     width: auto; */
     text-decoration: none;
-    color: #2d6744;
+    color: #2d5767;
     font-weight: 900;
     transition-duration: 0.6s;
     font-size: 1.1rem;
@@ -98,11 +103,11 @@ nav ul li a{
     align-items: center;
     justify-content: center;
     height: 30px;
-    width: 130px;
+    /* width: 130px; */
     border-radius: 10px;
     list-style-type: none;
     margin: 0 8px;
-    transition-duration: 0.8s;
+    /* transition-duration: 0.8s; */
 }
 
 
@@ -159,14 +164,14 @@ nav ul li a:hover{
     align-items: center;
     color: white;
     font-size: 90px;
-    -webkit-text-stroke: 2px #323a2c;
+    /* -webkit-text-stroke: 2px #323a2c; */
     font-weight: 900;
 }
 
 .name-container{
     display: flex;
     position: relative;
-    bottom: 40px;
+    /* bottom: 40px; */
     border: none;
     border-style: none;
 }
@@ -200,4 +205,35 @@ nav ul li a:hover{
 .second-section{
     height: 100vh;
     width: 100%;
+}
+
+
+
+/* ------------ Responsive for Mobile Starts Here ! ------------ */
+@media screen and (max-width: 1200px){
+
+    
+/* nav{
+        width: 10%;
+}
+
+.right-menu{
+    border: none;
+}
+
+nav ul li{
+    width: 110px;
+    margin: -20px;
+}
+
+nav ul li a{
+    margin: 0px;
+    font-size: 13px;
+    font-weight: normal;
+} */
+
+.first-left{
+    font-size: 40px;
+}
+
 }
