--- a/index.css
+++ b/index.css
@@ -15,14 +15,15 @@ body{
     width: 100%;
     /* background-color: rgb(0, 0, 0); */
     color: white;
-
-    background: #141E30;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #243B55, #141E30);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #243B55, #141E30); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    
+    background: #F1F2B5;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #135058, #F1F2B5);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #135058, #F1F2B5); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
     /* background-color: #B4DAA7; */
     font-family: 'Ysabeau Infant', sans-serif;
 }
+
 
 .container{
     display: flex;
@@ -32,8 +33,8 @@ body{
 }
 
 .right-menu{
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     background-color: white;
-    border: 2px solid white;
     border-radius: 15px;
     height: 35px;
     display: flex;
@@ -42,7 +43,7 @@ body{
 
 /* Header Page/Naigation Bar CSS */
 #header{
-    position: relative;
+    position: absolute;
     height: 55px;
 }
 
@@ -159,6 +160,7 @@ nav ul li a:hover{
 .first-left{
     /* width: 50%; */
     display: flex;
+    
     flex-direction: row;
     justify-content: center;
     align-items: center;
@@ -232,8 +234,26 @@ nav ul li a{
     font-weight: normal;
 } */
 
+nav ul li{
+    margin: 0px;
+    width: 75px;
+}
+
+nav ul li a{
+    margin: 2px;
+    font-size: 12px;
+}
+
+
 .first-left{
     font-size: 40px;
 }
 
+.name-container{
+    bottom: 30px;
 }
+
+}
+
+
+
