--- a/index.css
+++ b/index.css
@@ -1,21 +1,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Young+Serif&display=swap');
 
-html{
-    scroll-behavior: smooth;
-}
+/* html{
+} */
 
 *{
+    scroll-behavior: smooth;
     margin: 0;
     padding: 0;
     /* scroll-behavior: smooth; */
+}
+main{
+    scroll-behavior: smooth;
 }
 
 body{
     width: 100%;
     /* background-color: rgb(0, 0, 0); */
     color: white;
-    
+    /* scroll-behavior: smooth; */
+
     background: #F1F2B5;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #135058, #F1F2B5);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #135058, #F1F2B5); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
@@ -33,8 +37,8 @@ body{
 }
 
 .right-menu{
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.473) 0px 5px 15px;
+    background-color: rgba(0, 0, 0, 0.2);
     border-radius: 15px;
     height: 35px;
     display: flex;
@@ -84,7 +88,7 @@ nav ul li{
 
 nav ul li:hover{
     border-radius: 10px;
-    background-color: rgb(33, 64, 78);
+    background-color: rgb(88, 121, 28);
 }
 
 
@@ -95,7 +99,8 @@ nav ul li a{
     /* height: auto;
     width: auto; */
     text-decoration: none;
-    color: #2d5767;
+    color: #ffffff; /*Color for Transparent Background*/
+    /* color: #2d5767; Original Color for the Navigation Bar! */ 
     font-weight: 900;
     transition-duration: 0.6s;
     font-size: 1.1rem;
@@ -207,6 +212,32 @@ nav ul li a:hover{
 .second-section{
     height: 100vh;
     width: 100%;
+}
+
+.aboutme-container{
+    /* height: 100vh; */
+    display: flex;
+    position: relative;
+    justify-content: space-evenly;
+    top: 110px;
+    align-items: center;
+    /* width: 100%; */
+}
+
+.description{
+    width: 200px;
+    height: 300px;
+}
+
+.description img{
+    width: 115px;
+}
+
+.information-aboutme{
+    position: relative;
+    top: 90px;
+    width: 300px;
+    height: 390px;
 }
 
 
