--- a/index.css
+++ b/index.css
@@ -222,9 +222,17 @@ nav ul li a:hover{
     top: 110px;
     align-items: center;
     /* width: 100%; */
+    border-radius: 20px;
 }
 
 .description{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    box-shadow: rgba(0, 0, 0, 0.473) 0px 5px 15px;
+    background-color: #2c3a27;
+    border-radius: 15px;
     width: 200px;
     height: 300px;
 }
@@ -234,8 +242,15 @@ nav ul li a:hover{
 }
 
 .information-aboutme{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    border-radius: 20px;
+    box-shadow: rgba(0, 0, 0, 0.473) 0px 5px 15px;
+    background-color: #2c3a27;
     position: relative;
-    top: 90px;
+    /* top: 90px; */
     width: 300px;
     height: 390px;
 }
